Fixed #12: The articles top images are too tall

--- a/TLD15/TLD15/Pages/Articles/Read.cshtml.css
+++ b/TLD15/TLD15/Pages/Articles/Read.cshtml.css
@@ -8,21 +8,28 @@
     background-color: var(--brand-color-first);
     padding-bottom: 20px;
 }
+::deep .article-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: grayscale(100%);
+    transition: filter 0.3s ease;
+}
 
-    ::deep .article-image-overlay-division {
-        position: absolute;
-        top: -1px;
-        left: -1px;
-        background-color: var(--color-background);
-        color: var(--brand-color-third);
-        border: 1px solid var(--brand-color-third);
-        width: 70px;
-        padding: 5px;
-        height: 20px;
-        font-size: 20px;
-        font-weight: 600;
-        text-align: center;
-    }
+::deep .article-image-overlay-division {
+    position: absolute;
+    top: -1px;
+    left: -1px;
+    background-color: var(--color-background);
+    color: var(--brand-color-third);
+    border: 1px solid var(--brand-color-third);
+    width: 70px;
+    padding: 5px;
+    height: 20px;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+}
 
 ::deep .article-image-overlay-date {
     position: absolute;
